CRUD views for deliveries

--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -37,6 +37,7 @@
                     <div class="button cart_button"><a href="/models/new">Nouveau modèle</a></div>
                     <div class="button cart_button"><a href="/brands/new">Nouvelle marque</a></div>
                     <div class="button cart_button"><a href="/categories/new">Nouvelle catégorie</a></div>
+                    <div class="button cart_button"><a href="/deliveries/new">Nouvelle livraison</a></div>
                 </div>
                 <div class="admin_options">
                     <h2>Afficher et éditer</h2>
@@ -46,6 +47,7 @@
                     <div class="button cart_button"><a href="/models/all">Modèles</a></div>
                     <div class="button cart_button"><a href="/brands/all">Marques</a></div>
                     <div class="button cart_button"><a href="/categories/all">Catégories</a></div>
+                    <div class="button cart_button"><a href="/deliveries/all">Livraisons</a></div>
                 </div>
                 <div class="row">
                     <div class="admin_options">
