--- a/app/views/deliveries/new.html.erb
+++ b/app/views/deliveries/new.html.erb
@@ -28,23 +28,29 @@
             <!-- Inscription -->
             <div class="col-lg-8 contact_col">
                 <div class="get_in_touch">
-                    <div class="section_title">Modifier une livraison</div>
+                    <div class="section_title">Ajouter une livraison</div>
                     <div class="contact_form_container">
                         <%= form_for @delivery, url: {action: "create"} do |f| %>
                         <div class="row">
-                            <div class="col-xl-12">
+                            <div class="col-xl-6">
                                 <!-- Name -->
-                                <label for="contact_name">Nom et type</label>
+                                <label for="contact_name">Nom/type</label>
                                 <%= f.text_field :name, class: "contact_input" %>
                             </div>
-                            <div class="col-xl-12 last_name_col">
+                            <div class="col-xl-6 select_quantity">
+                                <%= f.label :delivery_time, "Délai de livraison (en jours)" %>
+                                <div class="select_quantity_container">
+                                    <%= f.number_field(:delivery_time, min: 0.01..99999999.0, step: 0.01) %>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6 last_name_col">
                                 <span>
                                     <%= f.label "Image de la livraison" %><br />
                                 </span>
                                 <%= f.file_field :delivery_picture %>
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="col-xl-6 select_quantity">
                                 <%= f.label :price, "Prix" %>
                                 <div class="select_quantity_container">
