--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -64,7 +64,11 @@
                             <%= image_tag product.product_picture %>
                             </div>
                         <% end %>
-                        <div class="product_extra product_new"><a href="categories.html">New</a></div>
+                        <% if product.status == "sales" %>
+                            <div class="product_extra product_sale"><a href="categories.html">-<%= product.discount %>%</a></div>
+                        <% elsif product.status == "hot" %>
+                            <div class="product_extra product_hot"><a href="categories.html">Hot</a></div>
+                        <% end %>
                         <div class="product_content">
                             <div class="product_title"><a href="/product/<%=product.id%>"><%= product.product_name %></a></div>
                             <div class="product_price"><%= number_to_currency(product.price, locale: :fr) %></div>
