added view for product_list but form_for in table break Turbolinks : need to fix it

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,6 +46,10 @@ button span:hover {
 	-moz-box-shadow: 0px 0px 15px -4px rgba(black, .4);
 }
 
+.alert {
+	background-color: rgb(24, 26, 24);
+}
+
 /*Profile dropdown*/
 .user_profile img {
 	height: 35px;
