--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <div class="super_container">
     <%= render "layouts/header" %>
       <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %> flash_messages">
+      <div class="alert <%= message_type %> flash_messages">
         <%= message %>
       </div>
       <% end %>
