--- a/app/views/admin/products_list.html.erb
+++ b/app/views/admin/products_list.html.erb
@@ -33,6 +33,7 @@
                     <div class="admin_options">
                         <h2>Liste des produits</h2>
                     </div>
+                    <%= form_tag({controller: "admin", action: "multiple_update"}, {method: "patch"}) do %>
                     <table class="table">
                         <thead>
                             <tr>
@@ -42,22 +43,24 @@
                                 <th>Quantité</th>
                                 <th>Statut</th>
                                 <th>Réduction</th>
-                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
-                            <%@products.each do |product|%>
+
+                            <% for product in @products %>
                             <tr>
                                 <td>
                                     <a href='/product/<%=product.id%>'>
-                                        <%= product.product_name %></a>
+                                        <%= product.product_name %>
+                                        <%= product.id %></a>
                                 </td>
                                 <td>
                                     <%= product.phone_model.model %>
+                                    <%= hidden_field_tag "id", product.id %>
                                 </td>
                                 <td>
-                                    <%= form_for product, url: {action: "product_multi_update", controller: "admin", id: product.id.to_s} do |f| %>
                                     <div class="select_quantity_container_admin">
+                                        <%= fields_for("product_ids[]", product) do |f| %>
                                         <%= f.number_field(:price, step: 0.01) %>
                                     </div>
                                 </td>
@@ -76,16 +79,13 @@
                                         <%= f.number_field(:discount, step: 1, max: 100) %>
                                     </div>
                                 </td>
-                                <td>
-                                    <button class="newsletter_button trans_200">
-                                        <%= f.submit "Mettre à jour" %>
-                                    </button>
-                                    <% end %>
-                                </td>
                                 <% end %>
                             </tr>
+                            <% end %>
                         </tbody>
                     </table>
+                    <%= submit_tag "Soumettre" %>
+                    <% end %>
                 </div>
             </div>
         </div>
