users list + began filter products

--- a/app/views/admin/products_list.html.erb
+++ b/app/views/admin/products_list.html.erb
@@ -84,7 +84,9 @@
                             <% end %>
                         </tbody>
                     </table>
-                    <%= submit_tag "Soumettre" %>
+                    <button class="newsletter_button trans_200">
+                        <%= submit_tag "Soumettre" %>
+                    </button>
                     <% end %>
                 </div>
             </div>
